examples/test/testpolicy14788.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14788
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key11: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value39
          key6: value35
      podSelector:
        matchLabels:
          key6: value2
          key16: value31
          key41: value43
